# rents_per_sq_ft_uk

./: .gitignore  .~lock.PIPR_data.xlsx#  .~lock.Table_CTSOP3.0_2019.xlsx#  .~lock.floorx_summary.csv#  .~lock.pipr_cost_per_m2.csv#  EHS_data_validation.py  EHS_floorspace_by_bedroom_region.csv  EPC_Statistics_data_dictionary.ods  EPC_directory_match.py  Floorspace_from_bedrooms.py  IPFN_contignecy.py  LA_bedroom_tidy.py  PIPR_data.csv  Table_CTSOP3.0_2019.xlsx  area_to_epc_dir.json  area_to_epc_dir_report.csv  build_private_rental_bedroom_stats.py  floorx_summary.csv  floory_summary.csv  la_private_rent_floor_area_stats.csv  main.py  pipr_cost_per_m2.csv  pipr_to_rents_area_mapping.csv  price_per_sqm.py  pyproject.toml  rental_floor_stats_by_bedrooms.csv  sources_of_data.txt
EHS_analysis_outputs/: EHS_bedrooms_floor.csv  floorx_summary.csv  floory_summary.csv
LA_bedroom_properties/: .~lock.bungalow_bedrooms.csv#  bungalow_bedrooms.csv  flat_maisonette_bedrooms.csv  house_detached_bedrooms.csv  house_semi_detached_bedrooms.csv  house_terraced_bedrooms.csv
LA_boundaries/: LAD_MAY_2024_UK_BFE.dbf  LAD_MAY_2024_UK_BFE.shp.REMOVED.git-id  LAD_MAY_2024_UK_BFE.shp.xml  LAD_MAY_2024_UK_BFE.shx
PIPR_data/: PIPR_data.xlsx
linking_files/: area_to_epc_dir.json  area_to_epc_dir_report.csv
outputs/: pipr_cost_per_m2.csv  rental_floor_stats_by_bedrooms.csv
scripts/: 1_LA_bedroom_tidy.py  2_EPC_directory_match.py  3_IPFN_contingency.py  4_build_private_rental_bedroom_stats.py  5_price_per_sqm.py  6_plot_cpm2.py  A_EHS_data_tidying.py  B_Floorspace_from_bedrooms.py  (+6 more)
(+1767 files in other folders)
