[project]
name = "rents-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "fuzzywuzzy>=0.18.0",
    "ipfn>=1.4.4",
    "marimo>=0.14.16",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "pyreadstat>=1.3.1",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.1",
]
